Updated till Jo dikhta h wo bikta h

--- a/11-DataIsTheNewOil/package.json
+++ b/11-DataIsTheNewOil/package.json
@@ -4,7 +4,7 @@
   "description": "Igniting Our App",
   "scripts": {
     "test": "jest",
-    "start": "parcel style.html"
+    "start": "parcel data.html"
   },
   "keywords": [
     "react",
