updated till testing

--- a/13-TimeForTheTest/package.json
+++ b/13-TimeForTheTest/package.json
@@ -4,7 +4,8 @@
   "description": "Igniting Our App",
   "scripts": {
     "test": "jest",
-    "start": "parcel test.html"
+    "start": "parcel test.html",
+    "build": "parcel build test.html --public-url ./"
   },
   "keywords": [
     "react",
@@ -26,5 +27,16 @@
   },
   "browserslist": [
     "last 2 versions"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/core": "^7.27.7",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "babel-jest": "^30.0.2",
+    "jest": "^30.0.3",
+    "jest-environment-jsdom": "^30.0.2"
+  }
 }
